--- a/css/index.css
+++ b/css/index.css
@@ -488,7 +488,7 @@ div.cookies-desocultar{
     display: flex;
     /* border: 1px solid red; */
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-flow: row wrap;
     gap: 6rem;
     font-family: var(--fonte-paragrafos);
@@ -607,8 +607,118 @@ div.cookies-desocultar{
 
 /* Container Produtos - Início */
 
-.produto{
-    /* padding: 2rem 0; */
+.container-ezcar{
+    width: 100%;
+}
+
+.container-ezcar>div{
+    width: 90%;
+    margin: 0 auto;
+    padding: 2rem 0;
+    background: var(--linear-gradient-fundo);
+    min-height: 92vh;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    color: var(--cor-branco);
+    /* border: 1px solid red; */
+    font-family: var(--fonte-paragrafos);
+}
+
+.container-ezcar>div>p{
+    text-align: center;
+    color: var(--cor-principal);
+    font-size: 1.6rem;
+}
+
+.container-ezcar>div>a{
+    transition: .3s;
+    font-size: 3.5rem;
+    color: var(--cor-secundaria);
+}
+
+.container-ezcar>div>a img{
+    max-width: 15rem;
+}
+
+.container-ezcar>div>a:hover{
+    transform: scale(1.05);
+}
+
+.container-ezcar>div>h2{
+    color: var(--cor-principal);
+    font-size: 2.5rem;
+    text-align: center;
+    font-family: var(--fonte-titulos);
+}
+
+.ezcar{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 6rem;
+}
+
+.ezcar>img{
+    max-width: 25rem;
+}
+
+.ezcar>div{
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.ezcar>div>p{
+    background: var(--cor-principal);
+    border-radius: 5rem;
+    color: var(--cor-branco);
+    padding: 1rem 4rem;
+    text-align: center;
+    width: 30rem;
+    min-height: 9rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.ezcar>div>p span{
+    position: absolute;
+    background: var(--cor-branco);
+    border-radius: 50%;
+    padding: 2rem;
+    width: 6rem;
+    height: 6rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.ezcar>div>p img{
+    width: 4rem;
+}
+
+.ezcar-valores{
+    background: var(--cor-principal);
+    color: var(--cor-branco);
+    font-family: var(--fonte-titulos);
+    width: 80%;
+    display: flex;
+    gap: 2rem;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: center;
+    padding: 2rem;
+    font-size: 2rem;
+}
+
+/* .produto{
     width: 90%;
     margin: 0 auto;
     background: var(--linear-gradient-fundo);
@@ -652,22 +762,6 @@ div.cookies-desocultar{
     width: 70%;
 }
 
-/* .produto>div>a{
-    position: absolute;
-    width: 100%;
-    top: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.6);
-    justify-content: center;
-    align-items: center;
-    display: none;
-    transition: .3s;
-} */
-
-/* .produto>div:hover a{
-    display: flex;
-} */
-
 .produto a{
     background: var(--cor-principal);
     border-radius: 1rem;
@@ -689,7 +783,7 @@ div.cookies-desocultar{
 
 .produto a:hover{
     transform: scale(1.05);
-}
+} */
 
 /* Container Produtos - Fim */
 
@@ -808,7 +902,7 @@ div.video2 h2 span{
     align-items: center;
     gap: 3rem;
     color: var(--cor-branco);
-    font-weight: bold;
+    /* font-weight: bold; */
     /* border: 1px solid red; */
 }
 
