--- a/css/index.css
+++ b/css/index.css
@@ -1130,15 +1130,16 @@ div.video2 .imagens-video span{
     min-height: 92vh;
     display: flex;
     /* border: 1px solid red; */
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     flex-flow: column nowrap;
-    gap: 4rem;
+    gap: 5rem;
     font-family: var(--fonte-paragrafos);
 }
 
 .container-duvidas h2{
     font-size: 4rem;
+    color: var(--cor-principal);
 }
 
 .container-duvidas span{
