--- a/css/post.css
+++ b/css/post.css
@@ -97,7 +97,7 @@ body{
     padding: 1rem;
     width: 100%;
     position: fixed;
-    top: 9.8rem;
+    top: 9rem;
     right: 0;
     left: 0;
     font-size: 1.7rem;
@@ -190,7 +190,7 @@ div.cookies-desocultar{
 /* Cabecalho - Início */
 
 .cabecalho-invisivel{
-    min-height: 10rem;
+    min-height: 8rem;
 }
 
 .cabecalho, .cabecalho-mobile{
@@ -291,8 +291,21 @@ header form input:focus{
 
 .cabecalho>div>a, .cabecalho-mobile>div>a, .cabecalho-oculto>a{
     transition: .3s;
-    font-size: 3.5rem;
+    font-size: 1.9rem;
     color: var(--cor-secundaria);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    font-family: var(--fonte-titulos);
+}
+
+.cabecalho-mobile>div>a p{
+    transform: translateY(0.35rem);
+}
+
+.cabecalho-oculto>a p{
+    transform: translateY(0.3rem);
 }
 
 .cabecalho>div>a img, .cabecalho-mobile>div>a img, .cabecalho-oculto>a img{
@@ -393,15 +406,34 @@ header form input:focus{
 
 .container-post>div{
     width: 90%;
-    padding: 2rem 0;
+    padding: 1rem 0 2rem 0;
     margin: 0 auto;
     min-height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: column nowrap;
-    gap: 1.5rem;
+    gap: 1rem;
     font-family: var(--fonte-paragrafos);
+}
+
+.container-post>div>div:nth-child(1){
+    display: flex;
+    width: 100%;
+    justify-content: flex-start;
+    align-items: center;
+    flex-flow: row nowrap;
+    gap: 1rem;
+}
+
+.container-post>div>div:nth-child(1) a{
+    color: var(--cor-preto);
+    transition: .3s;
+}
+
+.container-post>div>div:nth-child(1) a:hover{
+    transform: scale(1.05);
+    text-decoration: underline;
 }
 
 .post{
@@ -716,7 +748,7 @@ header form input:focus{
     }
 }
 
-@media (max-width: 532px){
+@media (max-width: 590px){
 
     .cabecalho-oculto form{
         display: block;
